--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Button Ripple Effect</title>
+  <title>🔒</title>
   <style>
     body{
         margin: 0;
@@ -12,10 +12,10 @@
     }
 
     .btn{
-        background-color: pink;
-        padding: 20px 40px;
-        border-radius: 5px;
-        box-shadow: 0 0px 20px rgba(148, 93, 93, 0.8);
+        background-color: rgb(0, 0, 0);
+        padding: 1px 40px;
+        border-radius: 20px;
+        box-shadow: 0 0px 20px rgba(255, 255, 255, 0.8);
         text-decoration: none;
         color: black;
         position: relative;
@@ -32,7 +32,7 @@
     .btn::before{
         content: "";
         position: absolute;
-        background-color: orangered;
+        background-color: white;
         width: 0;
         height: 0;
         left: var(--xPos);
@@ -77,10 +77,11 @@
 
   </style>
   <link rel="stylesheet" href="styling.css">
+  <link rel="icon" href="Assets/favicon.png" type="image/x-icon">
 </head>
 <body>
   <div class="main">
-    <img src="the-one2.png" alt="" style="height: 160px; width: 150px; border-radius: 50%;">
+    <img src="Assets/the-one2.png" alt="" style="height: 160px; width: 150px; border-radius: 50%;">
     <div class="text">
         <h1 style="color: white; font-size: 30px;">Hello 😊</h1>
         <h1><span class="typing" style="color: white; font-size: 25px;"></span></h1>
