--- a/app.html
+++ b/app.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main</title>
+    <title>Jhay 🦁</title>
+
     <link rel="stylesheet" href="Styles/MainStyle.css">
     <link rel="stylesheet" href="Styles/MQ.css">
     <link rel="stylesheet" href="Styles/Live Style Switcher/color-2.css">
@@ -24,6 +25,8 @@
     <link rel="stylesheet" href="Live Style Switcher/color-3.css" class="alternate-style" title="color-3" disabled>
     <link rel="stylesheet" href="Live Style Switcher/color-4.css" class="alternate-style" title="color-4" disabled>
     <link rel="stylesheet" href="Live Style Switcher/color-5.css" class="alternate-style" title="color-5" disabled>
+
+    <link rel="icon" href="Assets/favicon.png" type="image/x-icon">
 
 </head>
 <body>
