--- a/loading.html
+++ b/loading.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loading Screen</title>
+    <title>🔓</title>
     <style>
         body {
             margin: 0;
@@ -33,6 +33,7 @@
             margin-top: 10px;
         }
     </style>
+    <link rel="icon" href="Assets/favicon.png" type="image/x-icon">
 </head>
 <body>
 
