--- a/app.html
+++ b/app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jhay 🦁</title>
+    <title>Jhay <span class="emoji">🦁</span></title>
 
     <link rel="stylesheet" href="Styles/MainStyle.css">
     <link rel="stylesheet" href="Styles/MQ.css">
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/css/twemoji.min.css">
+
 
 
     <!-- ===== Style Switcher ===== -->
@@ -27,6 +29,12 @@
     <link rel="stylesheet" href="Live Style Switcher/color-5.css" class="alternate-style" title="color-5" disabled>
 
     <link rel="icon" href="Assets/favicon.png" type="image/x-icon">
+
+    <style>
+        .emoji {
+            font-family: 'Twemoji', sans-serif;
+        }
+    </style>
 
 </head>
 <body>
@@ -59,7 +67,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
-                            <h3 class="hello">Hello 👋</h3>
+                            <h3 class="hello">Hello <span class="emoji">👋</span></h3>
                             <h3 class="hello"><span>Samuel Tagoe</span> here</h3>
                             <h3 class="my-profession">I'm a <span class="typing"></span></h3>
                             <p>
@@ -824,6 +832,7 @@
      </div>
     <!-- ===== Style Switcher End ===== -->
     <!-- ===== JS Files ===== -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/twemoji.min.js"></script>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js" integrity="sha512-+2pW8xXU/rNr7VS+H62aqapfRpqFwnSQh9ap6THjsm41AxgA0MhFRtfrABS+Lx2KHJn82UOrnBKhjZOXpom2LQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="JS/typing-script.js"></script>
