Took off the mf'ing emojies

--- a/app.html
+++ b/app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jhay <span class="emoji">🦁</span></title>
+    <title>Jhay</title>
 
     <link rel="stylesheet" href="Styles/MainStyle.css">
     <link rel="stylesheet" href="Styles/MQ.css">
@@ -29,20 +29,14 @@
     <link rel="stylesheet" href="Live Style Switcher/color-5.css" class="alternate-style" title="color-5" disabled>
 
     <link rel="icon" href="Assets/favicon.png" type="image/x-icon">
-
-    <style>
-        .emoji {
-            font-family: 'Twemoji', sans-serif;
-        }
-    </style>
-
 </head>
 <body>
     <div class="main-container">
     <!-- ===== Aside Start ===== -->
     <div class="aside">
         <div class="logo">
-            <a href="#"><span class="type">Jhay<i class="fa lion-emoji"></i></span></a>
+            <!-- <a href="#"><span class="type">Jhay<i class="fa lion-emoji"></i></span></a> -->
+            <a href="#"><span class="type">Jhay</span></a>
         </div>
         <div class="nav-toggler">
             <span></span>
@@ -650,7 +644,7 @@
                                     <h5>- Software Engineer & Co-Founder @ Algorix</h5>
                                     <i class="fa fa-quote-left" style="font-size: 15px; color: var(--skin-color);"></i>
                                     <p style="font-style: italic; font-size: 20px;">
-                                        I've had the privilege of working with Jhay at Algorix, and I can confidently say that his leadership is unlike any other. 
+                                        I've had the privilege of working with Samuel at Algorix, and I can confidently say that his leadership is unlike any other. 
                                         He’s not only a brilliant founder but also a genuis at solving problems with code. 
                                         Working with him has been an incredibly rewarding experience!
                                     </p>
