--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><span class="emoji">🔒</span></title>
+  <title>Locked</title>
   <style>
     body{
         margin: 0;
@@ -88,7 +88,7 @@
   <div class="main">
     <img src="Assets/the-one2.png" alt="" style="height: 160px; width: 150px; border-radius: 50%;">
     <div class="text">
-        <h1 style="color: white; font-size: 30px;">Hello <span class="emoji">😊</span></h1>
+        <h1 style="color: white; font-size: 30px;">Hello </span></h1>
         <h1><span class="typing" style="color: white; font-size: 25px;"></span></h1>
     </div>
     <a class="btn" onclick="openLoadingPage()">
@@ -121,11 +121,6 @@
             backSpeed: 10,
             loop: true,
         });
-    });
-
-    // Twemojis ==========================================
-    document.addEventListener('DOMContentLoaded', function () {
-        twemoji.parse(document.body);
     });
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js" integrity="sha512-+2pW8xXU/rNr7VS+H62aqapfRpqFwnSQh9ap6THjsm41AxgA0MhFRtfrABS+Lx2KHJn82UOrnBKhjZOXpom2LQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
